--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,16 +5,17 @@ header{
     justify-content: space-between;
     align-items: center;
     div{
-
         img{
-            height: 75px;
-            width: 150px;
+            width: 15vw;
             margin-left: 50px;
         }
     }
     .container-lista{
+        display: flex;
+        flex-flow: row nowrap;
         margin: 10px;
         margin-right: 50px;
+        height: 9vh;
         ul{
             display: flex;
             justify-content: space-between;
@@ -29,9 +30,49 @@ header{
                         color: #1ed760;
                     }
                 }
-                div{
-                    #icon{
-                        margin-right: 10px;
+            }
+            #perfil{
+                margin: 0;
+                display: flex;
+                align-items: center;
+
+                #icon{
+                    margin: 0px;
+                    margin-right: 10px;
+                    border-radius: 100px;
+                    width: 40px;
+                }
+
+            }
+            .no-exist{
+                width: 0px;
+            }
+            .container-popup{
+                background-color: white;
+                display: flex;
+                flex-flow: column nowrap;
+                list-style-type: none;
+                padding: 10px;
+                position: relative;
+                width: 100px;
+                top: 34px;
+                left: -75px;
+                border-radius: 10px;
+                height: 100px;
+                li{
+                    width: 0;
+                    height: 0;
+                    visibility: hidden;
+                }
+                .minWidth{
+                    width: auto;
+                    visibility: visible;
+                }
+                a{
+                    text-decoration: none;
+                    color: black;
+                    &:hover{
+                        color: #1ed760;               
                     }
                 }
             }
@@ -39,8 +80,98 @@ header{
                 border-right: 1px solid white;
             }
         }
-        div{
-            display: flex;
+    }
+}
+@media (max-width: 760px) {
+    .container-lista{
+        ul{
+            li{
+                width: 0;
+                visibility: hidden;
+                .container-popup{
+                    height: 100vh;
+                    background-color: black;
+                    min-width: 700px;
+                    color: white;
+                    display: flex;
+                    position: fixed;
+                    flex-flow: column-reverse wrap-reverse;
+                    padding: 40px;
+                    z-index: 2000;
+                    top: 0;
+                    left: 0;
+                    height: auto;
+                    visibility: visible;
+                    padding-bottom: 300px;
+                    div{
+                        display: inline-block;
+                        position: relative;
+                        left: 530px;
+                        top: 60px;
+                        #close{
+                            width: 50px;
+                            height: 50px;
+                        }
+                    }
+                    li{
+                        width: auto;
+                        height: auto;
+                        visibility: visible;  
+                    }
+                    #barra{
+                        width: 30px;
+                        border-bottom: white 1px solid;
+                        position: relative;
+                        left: -624px;
+                    }
+                    a{
+                        text-decoration: none;
+                        color: white;
+                        font-size: 30px;
+                        
+                        &:hover{
+                            color: #1ed760;               
+                        }
+                    }
+                }
+                @keyframes popup-mobile {
+                    0% {
+                        transform: translateX(100px);
+                    }
+                    100% {
+                        transform: translateX(0);
+                    }
+                }
+            }
+            #perfil{
+                visibility: visible;
+                width: auto;
+            }
         }
+    }          
+}
+@media (max-width: 660px) {
+    #divClose{
+        left: 450px;
+    }
+}
+@media (max-width: 560px) {
+    #divClose{
+        left: 300px;
+    }
+}
+@media (max-width: 440px) {
+    #divClose{
+        left: 200px;
+    }
+    .container-lista{
+        ul{
+            flex-flow:  row-reverse;
+        }
+    }
+}
+@media (max-width: 310px) {
+    #divClose{
+        left: 170px;
     }
 }
